change lta operation

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "input_identifiers = ('B02BEB4BAA63351C44F3DF2C9A6D8D116D089325', '442355F3238A8B5B9A016D3929ED42FCCF13C236')"
+    "input_identifiers = ('BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')"
    ]
   },
   {
@@ -241,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "input_references = ('https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=B02BEB4BAA63351C44F3DF2C9A6D8D116D089325', 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=442355F3238A8B5B9A016D3929ED42FCCF13C236')"
+    "input_references = ('https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')"
    ]
   },
   {
@@ -428,7 +428,7 @@
     "        print(agg_and_LTA[0].dtype)\n",
     "        print(agg_and_LTA[1].dtype)\n",
     "        \n",
-    "        anomaly_values = np.divide(agg_and_LTA[0] * 1.0, agg_and_LTA[1] * 1.0, out=np.zeros_like(agg_and_LTA[0] * 1.0), where=agg_and_LTA[1]!=0)\n",
+    "        anomaly_values = (agg_and_LTA[0] * 1.0) - (agg_and_LTA[1] * 1.0)\n",
     "        \n",
     "        print(anomaly_values.dtype)\n",
     "        \n",
@@ -663,7 +663,7 @@
     "    raster = filename\n",
     "    data = rasterio.open(raster)\n",
     "\n",
-    "    show(data)\n"
+    "    show(data)"
    ]
   },
   {
@@ -683,13 +683,20 @@
     "\n",
     "os.rmdir(temp_folder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vacc-env2",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "vacc-env2"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -701,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
