from references to start and enddate

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "nameOfRegion = dict([('id', 'nameOfRegion'),\n",
-    "                     ('value', 'SouthernAfrica'),\n",
+    "                     ('value', 'Global'),\n",
     "                     ('title', 'Name of Region'),\n",
     "                     ('abstract', 'Name of the region of interest'),\n",
     "                     ('minOccurs', '1')])"
@@ -187,11 +187,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To be discontinued\n",
     "indexAndApiKeys = dict([('id', 'indexAndApiKeys'),\n",
     "                        ('value', ''),\n",
     "                        ('title', 'index,apikey pairs'),\n",
     "                        ('abstract', 'index,apikey pairs'),\n",
     "                        ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startdate = dict([('id', 'startdate'),\n",
+    "                  ('value', '2016-01-01T00:00Z'),\n",
+    "                  ('title', 'Start date'),\n",
+    "                  ('abstract', 'Start date')]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enddate = dict([('id', 'enddate'),\n",
+    "                ('value', '2016-01-31T23:59Z'),\n",
+    "                ('title', 'End date'),\n",
+    "                ('abstract', 'End date')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexAgg = dict([('id', 'indexAgg'),\n",
+    "                 ('value', 'better-wfp-02-01-02'),\n",
+    "                 ('title', 'user'),\n",
+    "                 ('abstract', 'user to access catalog'),\n",
+    "                 ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apikeyAgg = dict([('id', 'apikeyAgg'),\n",
+    "                  ('value', 'AKCp5dKiSErckSAjjDgVNESxgPF8UGbaQARuBPw3fd4GjFKSTGBfgnVwtRmcBdyxECQyc3dSn'),\n",
+    "                  ('title', 'apikey'),\n",
+    "                  ('abstract', 'apikey to access catalog'),\n",
+    "                  ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexLTA = dict([('id', 'indexLTA'),\n",
+    "                 ('value', 'better-wfp-02-01-03'),\n",
+    "                 ('title', 'user'),\n",
+    "                 ('abstract', 'user to access LTA catalog'),\n",
+    "                 ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apikeyLTA = dict([('id', 'apikeyLTA'),\n",
+    "                  ('value', 'AKCp5dKiSErirtcEjukCQ3uCvwrcCfHPLR7dW39KCvM7ENXmZFFAfk5oAzwgxFx821fFZT7UE'),\n",
+    "                  ('title', 'apikey'),\n",
+    "                  ('abstract', 'apikey to access LTA catalog'),\n",
+    "                  ('minOccurs', '1')])"
    ]
   },
   {
