process several pairs from start and end date

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "N_6 = dict([('id', 'N_6'),\n",
-    "            ('value', 'False'),\n",
+    "            ('value', 'True'),\n",
     "            ('title', '60 Day Aggregation'),\n",
     "            ('abstract', 'Get a 30 day aggregation')])"
    ]
@@ -103,9 +103,9 @@
    "outputs": [],
    "source": [
     "N_12 = dict([('id', 'N_12'),\n",
-    "            ('value', 'False'),\n",
-    "            ('title', '120 Day Aggregation'),\n",
-    "            ('abstract', 'Get a 120 day aggregation')])"
+    "             ('value', 'False'),\n",
+    "             ('title', '120 Day Aggregation'),\n",
+    "             ('abstract', 'Get a 120 day aggregation')])"
    ]
   },
   {
@@ -115,9 +115,9 @@
    "outputs": [],
    "source": [
     "N_15 = dict([('id', 'N_15'),\n",
-    "            ('value', 'False'),\n",
-    "            ('title', '150 Day Aggregation'),\n",
-    "            ('abstract', 'Get a 150 day aggregation')])"
+    "             ('value', 'False'),\n",
+    "             ('title', '150 Day Aggregation'),\n",
+    "             ('abstract', 'Get a 150 day aggregation')])"
    ]
   },
   {
@@ -127,9 +127,9 @@
    "outputs": [],
    "source": [
     "N_18 = dict([('id', 'N_18'),\n",
-    "            ('value', 'False'),\n",
-    "            ('title', '180 Day Aggregation'),\n",
-    "            ('abstract', 'Get a 180 day aggregation')])"
+    "             ('value', 'False'),\n",
+    "             ('title', '180 Day Aggregation'),\n",
+    "             ('abstract', 'Get a 180 day aggregation')])"
    ]
   },
   {
@@ -139,9 +139,9 @@
    "outputs": [],
    "source": [
     "N_27 = dict([('id', 'N_27'),\n",
-    "            ('value', 'False'),\n",
-    "            ('title', '270 Day Aggregation'),\n",
-    "            ('abstract', 'Get a 270 day aggregation')])"
+    "             ('value', 'False'),\n",
+    "             ('title', '270 Day Aggregation'),\n",
+    "             ('abstract', 'Get a 270 day aggregation')])"
    ]
   },
   {
@@ -151,9 +151,9 @@
    "outputs": [],
    "source": [
     "N_36 = dict([('id', 'N_36'),\n",
-    "            ('value', 'False'),\n",
-    "            ('title', '360 Day Aggregation'),\n",
-    "            ('abstract', 'Get a 360 day aggregation')])"
+    "             ('value', 'False'),\n",
+    "             ('title', '360 Day Aggregation'),\n",
+    "             ('abstract', 'Get a 360 day aggregation')])"
    ]
   },
   {
@@ -187,20 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To be discontinued\n",
-    "indexAndApiKeys = dict([('id', 'indexAndApiKeys'),\n",
-    "                        ('value', ''),\n",
-    "                        ('title', 'index,apikey pairs'),\n",
-    "                        ('abstract', 'index,apikey pairs'),\n",
-    "                        ('minOccurs', '1')])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "startdate = dict([('id', 'startdate'),\n",
     "                  ('value', '2016-01-01T00:00Z'),\n",
     "                  ('title', 'Start date'),\n",
@@ -209,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,12 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "apikeyAgg = dict([('id', 'apikeyAgg'),\n",
-    "                  ('value', 'AKCp5dKiSErckSAjjDgVNESxgPF8UGbaQARuBPw3fd4GjFKSTGBfgnVwtRmcBdyxECQyc3dSn'),\n",
+    "                  ('value', ''),\n",
     "                  ('title', 'apikey'),\n",
     "                  ('abstract', 'apikey to access catalog'),\n",
     "                  ('minOccurs', '1')])"
@@ -247,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "apikeyLTA = dict([('id', 'apikeyLTA'),\n",
-    "                  ('value', 'AKCp5dKiSErirtcEjukCQ3uCvwrcCfHPLR7dW39KCvM7ENXmZFFAfk5oAzwgxFx821fFZT7UE'),\n",
+    "                  ('value', ''),\n",
     "                  ('title', 'apikey'),\n",
     "                  ('abstract', 'apikey to access LTA catalog'),\n",
     "                  ('minOccurs', '1')])"
@@ -318,7 +304,35 @@
    },
    "outputs": [],
    "source": [
-    "input_references = ('https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')"
+    "#input_references = ('https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')\n",
+    "\n",
+    "input_references = ['https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=8BE72229A47B14B8EEF03385BC883DD1542C5DD9',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=9F00C1D3DC811CF9DF9E12E5E7342BD3C48160E4',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=150351E780783792AEFA3D6A7A3CE2506F357D9D',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=3F03ADB5DF4DACA8D52FD8A5CE240F3814605940',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=4C0EB6BA565F109E42FC597B8BFBD39278B588DA',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=CDD6119CC5E300B6E786705D19311F15C69DF336',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=CD3EAEAD0D74418B41A9E3961CABC7EA6FC3CA4F',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=433D945250012605A7D18FBAA9D711E4A32B2A0C',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=DD16ACAD883D7F45BAA95444DC6D415C79E3D587',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=E86BCE4AB7C6FEACC62E375138C948F58D3EEC3C',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=0A9114180CC1928E07F0AD8BDA5C8FA53400C288',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=1D823BE78EDC4DB419B450DBEE1326FF4D7E4194',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=E437DBEEB2CE6D23165A3868921E342E8EB66806',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=EB7BC1378DF70E9117F0393FFE47B03045DC30A4',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=9E20D30EBD2CFD32FFB29EF38B2DE252D756C74D',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=1E87C98BB9066492134815F7F9174829E5D652EB',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=831C5B1DF8010833584668C87FAE103BE9585E83',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=96AE33B045117204E00D24BBE1EB89FFE9C27671',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=6D5ED7B4934EA47691A030D15B4C16FF7D713B8C',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=D91A8C33B2B5A84322EF49AF88F3B72EBB79A194',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=BBBDB9CA245FE1A63F47DA1D601C3D04D904AFB9',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=33C82638114C570D6973003095AFAFDC96BDF9C5',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=6D825F8DC18D3589792883F68C708FA79A533937',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=976A9A405FCCB99779761F65EB44DE546D190641',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=332D20209FEDE740C985D9C32A47F9632294369D',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=F9263AF3FBDC0B7F70A86BCF116AA1CEC96B45DA',\n",
+    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=518C9501277A953D5CF1AB1C8E071661E6A5D4E5']"
    ]
   },
   {
@@ -601,33 +615,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "message = 'Getting metadata from catalog' \n",
-    "ciop.log('INFO', message)\n",
-    "\n",
-    "\n",
-    "# organize indexes and apikeys in a python dictionary\n",
-    "indexAndApiKeys_splited = indexAndApiKeys['value'].split(',')\n",
-    "apikeys = {}\n",
-    "for idx,ele in enumerate(indexAndApiKeys_splited):\n",
-    "    \n",
-    "    if (idx % 2 == 0):\n",
-    "        print(ele)\n",
-    "        apikeys[ele] = indexAndApiKeys_splited[idx+1]\n",
-    "        \n",
-    "\n",
-    "# get input data from catalog\n",
-    "input_metadata = get_input_metadata (input_references, apikeys)\n",
-    "\n",
-    "\n",
-    "\n",
-    "input_metadata_LTA = input_metadata[input_metadata['title'].str.find('LTA') != -1]\n",
-    "input_metadata_Agg = input_metadata[input_metadata['title'].str.find('LTA') == -1]\n",
-    "\n"
+    "##### Get metadata"
    ]
   },
   {
@@ -636,76 +627,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if isinstance(input_identifiers, str):\n",
-    "    input_identifiers = [input_identifiers]\n",
+    "message = 'Getting metadata from catalog' \n",
+    "ciop.log('INFO', message)\n",
     "\n",
-    "region_of_interest = regionOfInterest['value']\n",
-    "name_of_region = nameOfRegion['value']\n",
+    "# organize indexes and apikeys in a python dictionary\n",
+    "apikeys = {indexAgg['value']: apikeyAgg['value'], indexLTA['value']: apikeyLTA['value']}\n",
     "\n",
+    "# get input data from catalog\n",
+    "input_metadata = get_input_metadata (input_references, apikeys)\n",
     "\n",
-    "# get data paths from catalog metadata\n",
-    "filepath_agg = os.path.join(data_path, input_metadata_Agg['enclosure'].iloc[0].split('/')[-1])\n",
-    "filepath_LTA = os.path.join(data_path, input_metadata_LTA['enclosure'].iloc[0].split('/')[-1])\n",
-    "\n",
-    "\n",
-    "print(filepath_agg)\n",
-    "print(filepath_LTA)\n",
-    "\n",
+    "input_metadata_LTA = input_metadata[input_metadata['title'].str.find('LTA') != -1]\n",
+    "input_metadata_Agg = input_metadata[input_metadata['title'].str.find('LTA') == -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Define pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(input_metadata_LTA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(input_metadata_Agg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_lat_idx = {}\n",
     "\n",
     "# N time steps\n",
-    "nlist = [N_1['value'], N_3['value'], N_6['value']]\n",
+    "nlist = [N_1['value'], N_3['value'], N_6['value'], N_9['value'], N_12['value'], N_15['value'], N_18['value'], N_27['value'], N_36['value']]\n",
     "nlist = [n == 'True' for n in nlist]\n",
     "nvalues = [1, 3, 6, 9, 12, 15, 18, 27, 36]\n",
-    "\n",
-    "\n",
-    "# get metadata from catalog metadata (Agg and LTA)\n",
-    "\n",
-    "# Agg\n",
-    "\n",
-    "file_name_elements = os.path.basename(filepath_agg).split('.')[0].split('_')\n",
-    "\n",
-    "agg_type = file_name_elements[-3]\n",
-    "Nn = file_name_elements[-4]\n",
-    "\n",
-    "first_date = input_metadata_Agg['startdate'].iloc[0].strftime('%Y-%m-%d')\n",
-    "last_date = input_metadata_Agg['enddate'].iloc[0].strftime('%Y-%m-%d')\n",
-    "\n",
-    "print(first_date)\n",
-    "print(last_date)\n",
-    "\n",
-    "# LTA\n",
-    "\n",
-    "file_name_elements = os.path.basename(filepath_LTA).split('.')[0].split('_')\n",
-    "\n",
-    "agg_type_LTA = file_name_elements[-5]\n",
-    "Nn_LTA = file_name_elements[-6]\n",
-    "\n",
-    "\n",
-    "start_year = str(input_metadata_LTA['startdate'].iloc[0].year)\n",
-    "end_year = str(input_metadata_LTA['enddate'].iloc[0].year)\n",
-    "\n",
-    "print(start_year)\n",
-    "print(end_year)\n",
-    "\n",
-    "\n",
     "\n",
     "for bl,nv in zip(nlist, nvalues):\n",
     "    \n",
     "    # only works for selected N time steps\n",
     "    if bl:\n",
-    "        print(filepath_agg)\n",
-    "        print(filepath_LTA)\n",
     "        \n",
-    "        message = 'Computing Anomaly'\n",
-    "        ciop.log('INFO', message)\n",
-    "        \n",
-    "        anomaly_values, projection, geotransform, no_data_value, data_type = calc_anomaly(filepath_agg, filepath_LTA)\n",
-    "        \n",
-    "        message = 'Writing anomaly image'\n",
-    "        ciop.log('INFO', message)\n",
-    "        \n",
-    "        filename = write_anomaly_output(anomaly_values, output_folder, 'LST', first_date, last_date, start_year, end_year, agg_type, None, nv, region_of_interest, name_of_region, projection, geotransform, no_data_value)\n",
-    "        write_properties_file(filename, datetime.datetime.strptime(first_date, \"%Y-%m-%d\").date(), datetime.datetime.strptime(last_date, \"%Y-%m-%d\").date(), region_of_interest)"
+    "        subN_input_metadata_Agg = input_metadata_Agg[input_metadata_Agg['title'].str.contains('_N(?:{})_'.format(nv))]\n",
+    "        subN_input_metadata_LTA = input_metadata_LTA[input_metadata_LTA['title'].str.contains('_N(?:{})_'.format(nv))]\n",
+    "\n",
+    "        for index_agg, row_agg in subN_input_metadata_Agg.iterrows():\n",
+    "            #print(row['c1'], row['c2'])\n",
+    "            agg_lat_idx[index_agg] = []\n",
+    "\n",
+    "            sm = pd.to_datetime(row_agg['startdate']).month\n",
+    "            sd = pd.to_datetime(row_agg['startdate']).day\n",
+    "            em = pd.to_datetime(row_agg['enddate']).month\n",
+    "            ed = pd.to_datetime(row_agg['enddate']).day\n",
+    "\n",
+    "\n",
+    "\n",
+    "            for index_lta, row_lta in subN_input_metadata_LTA.iterrows():\n",
+    "\n",
+    "                if sm == pd.to_datetime(row_lta['startdate']).month and sd == pd.to_datetime(row_lta['startdate']).day and em == pd.to_datetime(row_lta['enddate']).month and ed == pd.to_datetime(row_lta['enddate']).day:\n",
+    "                    if row_agg['title'].split('_')[3] in row_lta['title']:\n",
+    "                        agg_lat_idx[index_agg].append(index_lta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for agg_idx in agg_lat_idx:\n",
+    "    print((input_metadata_Agg.loc[agg_idx]['title']) , (input_metadata_LTA.loc[agg_lat_idx[agg_idx][0]]['title']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region_of_interest = regionOfInterest['value']\n",
+    "name_of_region = nameOfRegion['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: add something to choose between LTAs list\n",
+    "for agg_idx in agg_lat_idx:\n",
+    "    #print((input_metadata_Agg.loc[agg_idx]['title']) , (input_metadata_LTA.loc[agg_lat_idx[agg_idx][0]]['title']))\n",
+    "    \n",
+    "    if len(agg_lat_idx[agg_idx]) < 1:\n",
+    "        continue\n",
+    "    \n",
+    "    sub_input_metadata_Agg = input_metadata_Agg.loc[agg_idx]\n",
+    "    sub_input_metadata_LTA = input_metadata_LTA.loc[agg_lat_idx[agg_idx][0]]\n",
+    "    \n",
+    "    \n",
+    "    # get data paths from catalog metadata\n",
+    "    filepath_agg = os.path.join(data_path, sub_input_metadata_Agg['enclosure'].split('/')[-1])\n",
+    "    filepath_LTA = os.path.join(data_path, sub_input_metadata_LTA['enclosure'].split('/')[-1])\n",
+    "    \n",
+    "    \n",
+    "    print(filepath_agg)\n",
+    "    print(filepath_LTA)\n",
+    "    \n",
+    "    \n",
+    "    # get metadata from catalog metadata (Agg and LTA)\n",
+    "\n",
+    "    # Agg\n",
+    "\n",
+    "    file_name_elements = os.path.basename(filepath_agg).split('.')[0].split('_')\n",
+    "\n",
+    "    agg_type = file_name_elements[-3]\n",
+    "    \n",
+    "    Nn = file_name_elements[-4]\n",
+    "    nv = int(Nn.split('N')[-1])\n",
+    "\n",
+    "    first_date = sub_input_metadata_Agg['startdate'].strftime('%Y-%m-%d')\n",
+    "    last_date = sub_input_metadata_Agg['enddate'].strftime('%Y-%m-%d')\n",
+    "\n",
+    "    print(nv)\n",
+    "    print(first_date)\n",
+    "    print(last_date)\n",
+    "    \n",
+    "    \n",
+    "    # LTA\n",
+    "\n",
+    "    file_name_elements = os.path.basename(filepath_LTA).split('.')[0].split('_')\n",
+    "\n",
+    "    agg_type_LTA = file_name_elements[-5]\n",
+    "    Nn_LTA = file_name_elements[-6]\n",
+    "\n",
+    "\n",
+    "    start_year = str(sub_input_metadata_LTA['startdate'].year)\n",
+    "    end_year = str(sub_input_metadata_LTA['enddate'].year)\n",
+    "\n",
+    "    print(start_year)\n",
+    "    print(end_year)\n",
+    "    \n",
+    "      \n",
+    "\n",
+    "    message = 'Computing Anomaly'\n",
+    "    ciop.log('INFO', message)\n",
+    "\n",
+    "    anomaly_values, projection, geotransform, no_data_value, data_type = calc_anomaly(filepath_agg, filepath_LTA)\n",
+    "\n",
+    "    message = 'Writing anomaly image'\n",
+    "    ciop.log('INFO', message)\n",
+    "\n",
+    "    filename = write_anomaly_output(anomaly_values, output_folder, 'LST', first_date, last_date, start_year, end_year, agg_type, None, nv, region_of_interest, name_of_region, projection, geotransform, no_data_value)\n",
+    "    write_properties_file(filename, datetime.datetime.strptime(first_date, \"%Y-%m-%d\").date(), datetime.datetime.strptime(last_date, \"%Y-%m-%d\").date(), region_of_interest)\n"
    ]
   },
   {
