update package list and apply minor changes

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "N_6 = dict([('id', 'N_6'),\n",
-    "            ('value', 'True'),\n",
+    "            ('value', 'False'),\n",
     "            ('title', '60 Day Aggregation'),\n",
     "            ('abstract', 'Get a 30 day aggregation')])"
    ]
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "regionOfInterest = dict([('id', 'regionOfInterest'),\n",
-    "                         ('value', 'POLYGON((11.5030755518998 -11.1141633706909,41.0343255518998 -11.1141633706909,41.0343255518998 -34.9763656693858,11.5030755518998 -34.9763656693858,11.5030755518998 -11.1141633706909))'),\n",
+    "                         ('value', 'POLYGON((-179.999 89.999, 179.999 89.999, 179.999 -89.999, -179.999 -89.999, -179.999 89.999))'),\n",
     "                         ('title', 'WKT Polygon for the Region of Interest'),\n",
     "                         ('abstract', 'Set the value of WKT Polygon')])"
    ]
@@ -213,8 +213,8 @@
    "source": [
     "indexAgg = dict([('id', 'indexAgg'),\n",
     "                 ('value', 'better-wfp-02-01-02'),\n",
-    "                 ('title', 'user'),\n",
-    "                 ('abstract', 'user to access catalog'),\n",
+    "                 ('title', 'Aggregation user'),\n",
+    "                 ('abstract', 'user to access aggregations catalog'),\n",
     "                 ('minOccurs', '1')])"
    ]
   },
@@ -226,8 +226,8 @@
    "source": [
     "apikeyAgg = dict([('id', 'apikeyAgg'),\n",
     "                  ('value', ''),\n",
-    "                  ('title', 'apikey'),\n",
-    "                  ('abstract', 'apikey to access catalog'),\n",
+    "                  ('title', 'Aggregation apikey'),\n",
+    "                  ('abstract', 'apikey to access aggregations catalog'),\n",
     "                  ('minOccurs', '1')])"
    ]
   },
@@ -239,8 +239,8 @@
    "source": [
     "indexLTA = dict([('id', 'indexLTA'),\n",
     "                 ('value', 'better-wfp-02-01-03'),\n",
-    "                 ('title', 'user'),\n",
-    "                 ('abstract', 'user to access LTA catalog'),\n",
+    "                 ('title', 'LTA user'),\n",
+    "                 ('abstract', 'user to access LTAs catalog'),\n",
     "                 ('minOccurs', '1')])"
    ]
   },
@@ -252,8 +252,8 @@
    "source": [
     "apikeyLTA = dict([('id', 'apikeyLTA'),\n",
     "                  ('value', ''),\n",
-    "                  ('title', 'apikey'),\n",
-    "                  ('abstract', 'apikey to access LTA catalog'),\n",
+    "                  ('title', 'LTA apikey'),\n",
+    "                  ('abstract', 'apikey to access LTAs catalog'),\n",
     "                  ('minOccurs', '1')])"
    ]
   },
@@ -281,7 +281,7 @@
    },
    "outputs": [],
    "source": [
-    "input_identifiers = ('BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')"
+    "input_identifiers = ('dummy')"
    ]
   },
   {
@@ -304,35 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "#input_references = ('https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=BA814DC8750F34CF816D9F575868EEBDB8C8FF43', 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=A4A35B1A6722BC3B54A4E2A3AE36CE8697D26BC7')\n",
-    "\n",
-    "input_references = ['https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=8BE72229A47B14B8EEF03385BC883DD1542C5DD9',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=9F00C1D3DC811CF9DF9E12E5E7342BD3C48160E4',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=150351E780783792AEFA3D6A7A3CE2506F357D9D',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=3F03ADB5DF4DACA8D52FD8A5CE240F3814605940',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=4C0EB6BA565F109E42FC597B8BFBD39278B588DA',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=CDD6119CC5E300B6E786705D19311F15C69DF336',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=CD3EAEAD0D74418B41A9E3961CABC7EA6FC3CA4F',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=433D945250012605A7D18FBAA9D711E4A32B2A0C',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=DD16ACAD883D7F45BAA95444DC6D415C79E3D587',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=E86BCE4AB7C6FEACC62E375138C948F58D3EEC3C',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=0A9114180CC1928E07F0AD8BDA5C8FA53400C288',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=1D823BE78EDC4DB419B450DBEE1326FF4D7E4194',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-02/search?format=atom&uid=E437DBEEB2CE6D23165A3868921E342E8EB66806',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=EB7BC1378DF70E9117F0393FFE47B03045DC30A4',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=9E20D30EBD2CFD32FFB29EF38B2DE252D756C74D',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=1E87C98BB9066492134815F7F9174829E5D652EB',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=831C5B1DF8010833584668C87FAE103BE9585E83',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=96AE33B045117204E00D24BBE1EB89FFE9C27671',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=6D5ED7B4934EA47691A030D15B4C16FF7D713B8C',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=D91A8C33B2B5A84322EF49AF88F3B72EBB79A194',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=BBBDB9CA245FE1A63F47DA1D601C3D04D904AFB9',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=33C82638114C570D6973003095AFAFDC96BDF9C5',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=6D825F8DC18D3589792883F68C708FA79A533937',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=976A9A405FCCB99779761F65EB44DE546D190641',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=332D20209FEDE740C985D9C32A47F9632294369D',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=F9263AF3FBDC0B7F70A86BCF116AA1CEC96B45DA',\n",
-    " 'https://catalog.terradue.com/better-wfp-02-01-03/search?format=atom&uid=518C9501277A953D5CF1AB1C8E071661E6A5D4E5']"
+    "input_references = ['dummy']"
    ]
   },
   {
@@ -356,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "data_path = \"/workspace/modis/outputs/output_02_03\""
+    "data_path = \"/workspace/modis\""
    ]
   },
   {
@@ -407,8 +379,6 @@
     "import numpy as np\n",
     "from osgeo import gdal, ogr, osr\n",
     "from shapely.wkt import loads\n",
-    "\n",
-    "import pdb\n",
     "\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -554,6 +524,7 @@
     "    if no_data_value is not None:\n",
     "        raster_band.SetNoDataValue(no_data_value)\n",
     "    raster_band.WriteArray(output_matrix)\n",
+    "    \n",
     "    gdal.Warp(filepath, output, format=\"GTiff\", outputBoundsSRS='EPSG:4326', xRes=output_geotransform[1], yRes=-output_geotransform[5], targetAlignedPixels=True)\n",
     "\n",
     "    \n",
@@ -814,25 +785,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if check_results:\n",
-    "\n",
-    "    import rasterio\n",
-    "\n",
-    "    from rasterio.plot import show\n",
-    "\n",
-    "    # Load data\n",
-    "    raster = filename\n",
-    "    data = rasterio.open(raster)\n",
-    "\n",
-    "    show(data)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -849,13 +801,6 @@
     "\n",
     "os.rmdir(temp_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
